Adding a few basic information

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">About...</a></li>
+							<li><a href="#one">Research interest</a></li>
+							<li><a href="#two">Publications</a></li>
+							<li><a href="#three">Collaborations</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,11 +36,20 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>About</h1>
+							<p>Hello there! My name is Christophe Phillips. Working at the <a href="http://www.ulg.ac.be">University of Liège</a>, 
+							I am a <a href="http://www.fnrs.be">FRS-FNRS</a> Senior Research Associate at the <a href="http://www.giga.ulg.ac.be">GIGA</a>
+							but also Adjunct Assistant Professor at the <a href="http://www.montefiore.ulg.ac.be">Department of Electrical Engineering and
+							Computer Science (aka. Montefiore Institue)</a>. 
+							</p>My research focuses on the development of methods for the processing of neuroimaging data, within
+							the <a href="http://www.giga.ulg.ac.be/cms/c_17732/en/home">GIGA-in silico medicine</a> and 
+							<a href="http://www.giga.ulg.ac.be/cms/c_17552/en/home"GIGA-CRC in vivo imaging</a> research units.
+							<p>See here under for more details about my research interest, publications and collaborations.</p>
+						
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Research interest</a></li>
+								<li><a href="#two" class="button scrolly">Publications</a></li>
+								<li><a href="#three" class="button scrolly">Collarations</a></li>
 							</ul>
 						</div>
 					</section>
@@ -51,8 +60,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Research interests</h2>
+									<p>1, 2, 3...</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -63,8 +72,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>sqdqsdf</h2>
+									<p>qsdfqsdf</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -75,8 +84,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Other stufff...</h2>
+									<p>azerty.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -88,24 +97,27 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Publications/h2>
+							<p>Here is the output of my work and that of my collaborators.</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Papers</h3>
+									<p>From <a href="http://orbi.ulg.ac.be/ph-search?uid=u016440</p>"ORBI</a> (ULg's Open Repository)</p>
+									<p>From <a href="https://scholar.google.be/citations?user=U6i6DFYAAAAJ&hl=en</p>"Google Scholar</a></p>
+									<p>From <a href="http://orcid.org/0000-0002-4990-425X</p>"ORCiD</a></p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<h3>Talks</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<h3>Software</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+								<!--
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Veroeros quis lorem</h3>
@@ -121,6 +133,7 @@
 									<h3>Aliquam urna dapibus</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+								-->
 							</div>
 							<ul class="actions">
 								<li><a href="#" class="button">Learn more</a></li>
@@ -131,9 +144,10 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Collaborations</h2>
+							<p>Friends, colleagues, etc.</p>
 							<div class="split style1">
+							<!--
 								<section>
 									<form method="post" action="#">
 										<div class="field half first">
@@ -181,6 +195,7 @@
 										</li>
 									</ul>
 								</section>
+								-->
 							</div>
 						</div>
 					</section>
