--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Publications/h2>
+							<h2>Publications</h2>
 							<p>Here is the output of my work and that of my collaborators.</p>
 							<div class="features">
 								<section>
