Fixing some links and titles.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Christophe Phillips</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -43,7 +43,7 @@
 							Computer Science (aka. Montefiore Institue)</a>. 
 							</p>My research focuses on the development of methods for the processing of neuroimaging data, within
 							the <a href="http://www.giga.ulg.ac.be/cms/c_17732/en/home">GIGA-in silico medicine</a> and 
-							<a href="http://www.giga.ulg.ac.be/cms/c_17552/en/home"GIGA-CRC in vivo imaging</a> research units.
+							<a href="http://www.giga.ulg.ac.be/cms/c_17552/en/home">GIGA-CRC in vivo imaging</a> research units.
 							<p>See here under for more details about my research interest, publications and collaborations.</p>
 						
 							<ul class="actions">
@@ -103,19 +103,19 @@
 								<section>
 									<span class="icon major fa-code"></span>
 									<h3>Papers</h3>
-									<p>From <a href="http://orbi.ulg.ac.be/ph-search?uid=u016440</p>"ORBI</a> (ULg's Open Repository)</p>
-									<p>From <a href="https://scholar.google.be/citations?user=U6i6DFYAAAAJ&hl=en</p>"Google Scholar</a></p>
-									<p>From <a href="http://orcid.org/0000-0002-4990-425X</p>"ORCiD</a></p>
+									<p>From <a href="http://orbi.ulg.ac.be/ph-search?uid=u016440">ORBI</a> (ULg's Open Repository)</p>
+									<p>From <a href="https://scholar.google.be/citations?user=U6i6DFYAAAAJ&hl=en">Google Scholar</a></p>
+									<p>From <a href="http://orcid.org/0000-0002-4990-425X">ORCiD</a></p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
 									<h3>Talks</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>I gave a few talks...</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
 									<h3>Software</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Some words about SPM, PRoNTo, FASST and the tools available on GitHub.</p>
 								</section>
 								<!--
 								<section>
