--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Christophe Phillips</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -37,19 +37,21 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>About</h1>
-							<p>Hello there! My name is Christophe Phillips. Working at the <a href="http://www.ulg.ac.be">University of Liège</a>, 
+							<p>Hello there!</p>
+							<p>My name is Christophe Phillips. Working at the <a href="http://www.ulg.ac.be">University of Liège</a>, 
 							I am a <a href="http://www.fnrs.be">FRS-FNRS</a> Senior Research Associate at the <a href="http://www.giga.ulg.ac.be">GIGA</a>
 							but also Adjunct Assistant Professor at the <a href="http://www.montefiore.ulg.ac.be">Department of Electrical Engineering and
-							Computer Science (aka. Montefiore Institue)</a>. 
-							</p>My research focuses on the development of methods for the processing of neuroimaging data, within
+							Computer Science (aka. Montefiore Institue)</a>.</p>
+							<p>My research focuses on the development of methods for the processing of neuroimaging data, within
 							the <a href="http://www.giga.ulg.ac.be/cms/c_17732/en/home">GIGA-in silico medicine</a> and 
-							<a href="http://www.giga.ulg.ac.be/cms/c_17552/en/home"GIGA-CRC in vivo imaging</a> research units.
-							<p>See here under for more details about my research interest, publications and collaborations.</p>
+							<a href="http://www.giga.ulg.ac.be/cms/c_17552/en/home">GIGA-CRC in vivo imaging</a> research units.
+							<p>See here under for more details about my <a href="#one">research interests</a>, 
+								<a href="#two">publications (and other output)</a> and <a href="#three">collaborations</a>.</p>
 						
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Research interest</a></li>
-								<li><a href="#two" class="button scrolly">Publications</a></li>
-								<li><a href="#three" class="button scrolly">Collarations</a></li>
+								<li><a href="#one" class="button scrolly">Research interests</a></li>
+								<li><a href="#two" class="button scrolly">Output</a></li>
+								<li><a href="#three" class="button scrolly">Collaborations</a></li>
 							</ul>
 						</div>
 					</section>
@@ -97,35 +99,35 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Publications</h2>
+							<h2>Output</h2>
 							<p>Here is the output of my work and that of my collaborators.</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
+									<span class="icon major fa-file-o"></span>
 									<h3>Papers</h3>
-									<p>From <a href="http://orbi.ulg.ac.be/ph-search?uid=u016440</p>"ORBI</a> (ULg's Open Repository)</p>
-									<p>From <a href="https://scholar.google.be/citations?user=U6i6DFYAAAAJ&hl=en</p>"Google Scholar</a></p>
-									<p>From <a href="http://orcid.org/0000-0002-4990-425X</p>"ORCiD</a></p>
+									<p>From <a href="http://orbi.ulg.ac.be/ph-search?uid=u016440">ORBI</a> (ULg's Open Repository)</p>
+									<p>From <a href="https://scholar.google.be/citations?user=U6i6DFYAAAAJ&hl=en">Google Scholar</a></p>
+									<p>From <a href="http://orcid.org/0000-0002-4990-425X">ORCiD</a></p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="icon major fa-desktop"></span>
 									<h3>Talks</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon major fa-cog"></span>
+									<span class="icon major fa-code"></span>
 									<h3>Software</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
-								<!--
+								<!-- -->
 								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
+									<span class="icon major fa-user"></span>
+									<h3>Supervised students</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
+									<span class="icon major fa-thumbs-up"></span>
+									<h3>Posters @ conferences</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
@@ -133,7 +135,7 @@
 									<h3>Aliquam urna dapibus</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
-								-->
+								<!-- -->
 							</div>
 							<ul class="actions">
 								<li><a href="#" class="button">Learn more</a></li>
