Updating content at last, part 1

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 						<div class="inner">
 							<h1>About</h1>
 							<p>Hello there!</p>
-							<p>My name is Christophe Phillips. Working at the <a href="http://www.ulg.ac.be">University of Liège</a>, 
-							I am a <a href="http://www.fnrs.be">FRS-FNRS</a> Senior Research Associate at the <a href="http://www.giga.ulg.ac.be">GIGA</a>
-							but also Adjunct Assistant Professor at the <a href="http://www.montefiore.ulg.ac.be">Department of Electrical Engineering and
+							<p>My name is <a href="https://www.uliege.be/cms/c_9054334/en/directory/?uid=U016440">Christophe Phillips</a>. Working at the <a href="http://www.uliege.be">University of Liège</a>, 
+							I am <a href="http://www.fnrs.be">FRS-FNRS</a> Senior Research Associate at the <a href="https://www.giga.uliege.be/">GIGA</a>
+							but also Associate Professor at the <a href="https://www.montefiore.uliege.be/">Department of Electrical Engineering and
 							Computer Science (aka. Montefiore Institue)</a>.</p>
 							<p>My research focuses on the development of methods for the processing of neuroimaging data, within
-							the <a href="http://www.giga.ulg.ac.be/cms/c_17732/en/home">GIGA-in silico medicine</a> and 
-							<a href="http://www.giga.ulg.ac.be/cms/c_17552/en/home">GIGA-CRC in vivo imaging</a> research units.
+							the <a href="https://www.gigainsilico.uliege.be/">GIGA-in silico medicine</a> and 
+							<a href="https://www.gigacrc.uliege.be/">GIGA-CRC in vivo imaging</a> research units.
 
 							<p>See here under for more details about my <a href="#one">research interests</a>, 
 								<a href="#two">publications (and other output)</a> and <a href="#three">collaborations</a>.</p>
@@ -62,11 +62,13 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Research interests</h2>
-									<p>1, 2, 3...</p>
+									<h2>Modalities</h2>
+									<p>Here are the CRC we deal with all sort of data: imaging (all flavours of MRI and PET), electrophysiology (mainly EEG), actimetry, and clinical scores</p>
+									<!-- 
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
+									 -->
 								</div>
 							</div>
 						</section>
@@ -74,11 +76,14 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>sqdqsdf</h2>
-									<p>qsdfqsdf</p>
+									<h2>Methods</h2>
+									<p>Uni- & multivariate statistics, plus machine learning applications</p>
+									<p>Quantitative MRI (qMRI) and the processing of these data for the study of neurodegenerative diseases (AD, PD, MS)</p>
+									<!-- 
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
+									-->
 								</div>
 							</div>
 						</section>
@@ -86,11 +91,13 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Other stufff...</h2>
-									<p>azerty.</p>
+									<h2>Data standardization & organization</h2>
+									<p>For reproducible and replicable science, one need to be able to easily make sense of the data available. This requires a proper standradization and organization of the data. <a href="https://bids.neuroimaging.io/">BIDS</a> may be part of the solution.</p>
+									<!-- 
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
+									-->
 								</div>
 							</div>
 						</section>
@@ -105,36 +112,42 @@
 								<section>
 									<span class="icon major fa-file-o"></span>
 									<h3>Papers</h3>
-									<p>From <a href="http://orbi.ulg.ac.be/ph-search?uid=u016440">ORBI</a> (ULg's Open Repository)</p>
+									<p>From <a href="https://orbi.uliege.be/ph-search?uid=u016440">ORBI</a>, ULiege's Open Repository with all the publications in open access</p>
 									<p>From <a href="https://scholar.google.be/citations?user=U6i6DFYAAAAJ&hl=en">Google Scholar</a></p>
 									<p>From <a href="http://orcid.org/0000-0002-4990-425X">ORCiD</a></p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Talks</h3>
-									<p>I gave a few talks...</p>
+									<p>I gave a few talks and presentations...</p>
+									<p>One day Educational Course on "Machine Learning for NeuroImaging" for the OHBM conference in <a href="https://cyclotronresearchcentre.github.io/OHBM2020_ML4NI/">2020</a> but also in <a href="https://cyclotronresearchcentre.github.io/OHBM2020_ML4NI/OHBM2018_PR4NI_ondemand_videos.html">2018</a>.</p>
 								</section>
 								<section>
 									<span class="icon major fa-code"></span>
 									<h3>Software</h3>
-									<p>Some words about SPM, PRoNTo, FASST and the tools available on GitHub.</p>
+									<p>I am involved in the development of several toolboxes: <a href="https://www.fil.ion.ucl.ac.uk/spm/">SPM</a>, <a href="http://www.mlnl.cs.ucl.ac.uk/pronto/">PRoNTo</a>, <a href="http://hmri.info">hMRI</a>, <a href="https://people.montefiore.uliege.be/phillips/FASST.html">FASST</a>.</p>
+						<p> Other bits of codes are available on the CRC <a href="https://github.com/CyclotronResearchCentre">GitHub</a> or <a href="https://gitlab.uliege.be/CyclotronResearchCentre">Gitlab</a> pages. Note that the latter is hosted on the ULiege server.</p>
 								</section>
 								<!-- -->
 								<section>
 									<span class="icon major fa-user"></span>
 									<h3>Supervised students</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Since 2008 I have (co-)supervised about lab internships, master thesis (17), and PhD thesis (11 completed and 5 ongoing).</p>
+									<p> If you are interested in my work and consider joining the lab, feel free to <a href="https://www.uliege.be/cms/c_9054334/en/directory/?uid=U016440">contact me</a>!</p>
 								</section>
 								<section>
 									<span class="icon major fa-thumbs-up"></span>
 									<h3>Posters @ conferences</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>From ORBI, here is the list of 
+									<a href="https://orbi.uliege.be/simple-search?query=%28%28uid%3Au016440%29%29+AND+%28%28type%3A%23D00%29+OR+%28type%3A%23M01%29%29&amp;title=Publications+and+communications+of+Christophe+Phillips+%5Bu016440%5D&amp;sort_by0=1&amp;order0=DESC&amp;sort_by1=3&amp;order1=ASC&amp;sort_by2=2&amp;order2=ASC">conference contributions.</a></p>
 								</section>
+								<!-- 
 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Aliquam urna dapibus</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+								-->
 								<!-- -->
 							</div>
 							<ul class="actions">
