Adding more info

--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
 								-->
 								<!-- -->
 							</div>
+							<!-- 
 							<ul class="actions">
 								<li><a href="#" class="button">Learn more</a></li>
 							</ul>
+							-->
 						</div>
 					</section>
 
@@ -182,35 +184,32 @@
 										</ul>
 									</form>
 								</section>
+								-->
 								<section>
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<span>Cyclotron Research Centre, B30	<br />
+											Université de Liège, Sart Tilman	<br />
+											8 Allée du Six Août,	<br />
+											4000 Liège, 	<br />
+											Belgium	<br />
 										</li>
 										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<h3>Email and telephone</h3>
+											<span> available in the <a href="https://www.uliege.be/cms/c_9054334/en/directory/?uid=U016440">university directory</a></span>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://twitter.com/Ch_Phillips" class="fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="https://www.facebook.com/christophe.phillips" class="fa-facebook"><span class="label">Facebook</span></a></li>
+												<li><a href="https://github.com/ChristophePhillips" class="fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/christophe-phillips-9507ab/" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
 								</section>
-								-->
 							</div>
 						</div>
 					</section>
