--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<a href="https://www.gigacrc.uliege.be/">GIGA-CRC in vivo imaging</a> research units.
 
 							<p>See here under for more details about my <a href="#one">research interests</a>, 
-								<a href="#two">publications (and other output)</a> and <a href="#three">collaborations</a>.</p>
+								<a href="#two">publications (and other output)</a> and <a href="#three">collaborations</a>. A more or less complete <a href="https://github.com/ChristophePhillips/CurriculumVitae/blob/master/myCV.md">CV is available here</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Research interests</a></li>
 								<li><a href="#two" class="button scrolly">Output</a></li>
