--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Modalities</h2>
-									<p>Here are the CRC we deal with all sort of data: imaging (all flavours of MRI and PET), electrophysiology (mainly EEG), actimetry, and clinical scores</p>
+									<p>Here at the CRC we deal with all sort of data: imaging (all flavours of MRI and PET), electrophysiology (mainly EEG), actimetry, and clinical scores</p>
 									<!-- 
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
