Update to FNRS RD

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h1>About</h1>
 							<p>Hello there!</p>
 							<p>My name is <a href="https://www.uliege.be/cms/c_9054334/en/directory/?uid=U016440">Christophe Phillips</a>. Working at the <a href="http://www.uliege.be">University of Liège</a>, 
-							I am <a href="http://www.fnrs.be">FRS-FNRS</a> Senior Research Associate at the <a href="https://www.giga.uliege.be/">GIGA</a>
+							I am <a href="http://www.fnrs.be">FRS-FNRS Research Director</a> at the <a href="https://www.giga.uliege.be/">GIGA</a>
 							but also Associate Professor at the <a href="https://www.montefiore.uliege.be/">Department of Electrical Engineering and
 							Computer Science (aka. Montefiore Institue)</a>.</p>
 							<p>My research focuses on the development of methods for the processing of neuroimaging data, within
