Update lab defintion and URL

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 							but also Professor at the <a href="https://www.montefiore.uliege.be/">Department of Electrical Engineering and
 							Computer Science</a> (aka. Montefiore Institute), <a href="https://www.uliege.be">University of Liège</a>, Belgium.</p>
 							<p>My research focuses on the development of methods for the processing of neuroimaging data, within
-							the <a href="https://www.gigainsilico.uliege.be/">GIGA-in silico medicine</a> and 
-							<a href="https://www.gigacrc.uliege.be/">GIGA-CRC in vivo imaging</a> research units.
-
+							the <a href="https://www.giga.neuroscience.uliege.be/">GIGA-CRC Human Imaging</a> research units and more specifically the 
+							<a href="https://giganidata.uliege.be/">GIGA Neurosciences - Development in data acquisition & modeling</a> laboratory.					
 							<p>See here under for more details about my <a href="#one">research interests</a>, 
 								<a href="#two">publications (and other output)</a> and <a href="#three">collaborations</a>. A more or less complete <a href="https://github.com/ChristophePhillips/CurriculumVitae/blob/master/myCV.md">CV is available here</a>.</p>
 							<ul class="actions">
